fix: use compatible methods